# Desktop-Calendar

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: Calendar.tsx  EventModal.tsx  ThemeToggle.tsx
src/lib/: api.ts
